@@ -4,7 +4,9 @@ cod-tools (unreleased)
     - COD::CIF::DDL:
       - the get_category_name_from_local_data_name() subroutine.
     - COD::CIF::DDL::DDL1:
-      - the classify_dic_blocks() subroutine.
+      - the classify_dic_blocks() subroutine;
+      - the get_data_name() subroutine;
+      - the get_data_names() subroutine.
   * Fixed:
     - COD::CIF::Data::Check:
       - fixed a typo in a warning message generated by the
